# Pubmed-scraper

./: README.md  output.csv  pyproject.toml  result.csv
src/pubmed_scraper/: cli.py  fetch.py
tests/: test_fetch.py
tests/pubmed_scraper/: cli.py  utils.py
